package Issues;

/**
 * Created by Vedant Chimote #CS19B44 on 05-05-2022 at 14:17
 */
public enum MessagePriority {
    Normal, High
}
